# GP1-Rasterizer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
project/: CMakeLists.txt
project/src/: BetterPraseObj.cpp  BetterPraseObj.h  Camera.h  Clipper.h  ColorRGB.h  DataTypes.h  Material.h  MathHelpers.h  Maths.h  Matrix.cpp  Matrix.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Utils.h  Vector.h  Vector2.cpp  Vector2.h  main.cpp
